fix up alignment for navbar items

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .navbar {
   display: flex;
+  box-sizing: border-box;
   width: 100%;
   height: 100px;
   font-family: 'Rubik', sans-serif;
   font-weight: 500;
+  padding: 0px 20px;
 }
 
 #navbar-heading {
   font-size: 30px;
+  margin-bottom: 5px;
 }
 
 #navbar-right-side {
@@ -45,6 +48,11 @@
 
 ul {
   margin: 0;
+}
+
+#sm-list {
+  font-size: 20px;
+  margin-right: 10px;
 }
 
 .navbar-link, .navbar-sm-icon {
